spargen/tests/snapshots/diff__an_object_all_of_emits_no_meet_a_later_member_superseded-7.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
minor|variant-added|ResponseBodyMember2innerkind|variant added: `Other(String)`, holding any unlisted value
bump=minor
