spargen/tests/snapshots/diff__an_open_enums_catch_all_is_a_variant_of_its_surface-2.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|variant-removed|ResponseBodyMember1type|variant removed: `Other(String)`, which held any unlisted value
minor|variant-added|ResponseBodyMember1type|variant added: `OtherD4d133db(String)`, holding any unlisted value
minor|variant-added|ResponseBodyMember1type|variant added: `other`
bump=major
