spargen/tests/snapshots/diff__an_open_enums_catch_all_is_a_variant_of_its_surface-4.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|variant-removed|ResponseBodyMember1type|variant removed: `Other(String)`, which held any unlisted value
bump=major
