spargen/tests/snapshots/diff__an_open_enums_catch_all_is_a_variant_of_its_surface.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
minor|variant-added|ResponseBodyMember1type|variant added: `c`
bump=minor
