spargen/tests/snapshots/diff__api_error_body_loss_is_reported_where_the_error_signature_cannot_see_it.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|api-error-body-removed|GET /pets|error type no longer implements `ApiErrorBody` (was `Body = String`)
bump=major
