spargen/tests/snapshots/diff__changed_field_type_is_major.snap
---
source: spargen/tests/diff.rs
expression: "fingerprint(report).join(\"\\n\")"
---
major|field-type-changed|Pet.id|field type `i64` -> `String`
bump=major
